--- a/Lab_3_Growth_of_function.ipynb
+++ b/Lab_3_Growth_of_function.ipynb
@@ -122,22 +122,22 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "def even_or_odd(number):\n",
-        "    # Only one check, fixed steps\n",
+        "\n",
         "    if number % 2 == 0:\n",
         "        return \"Even\"\n",
         "    else:\n",
         "        return \"Odd\"\n",
         "\n",
-        "# Input sizes from 1 to 100\n",
+        "\n",
         "n_values = list(range(1, 101))\n",
         "time_values = []\n",
         "\n",
-        "# Each operation takes constant time\n",
+        "\n",
         "for n in n_values:\n",
         "    even_or_odd(n)\n",
-        "    time_values.append(1)   # Always 1 unit of time\n",
+        "    time_values.append(1)\n",
         "\n",
-        "# Plotting\n",
+        "\n",
         "plt.figure()\n",
         "plt.plot(n_values, time_values)\n",
         "plt.xlabel(\"Input size n\")\n",
@@ -243,15 +243,14 @@
         "            count += 1\n",
         "    return count\n",
         "\n",
-        "    count = 0   # Initialize counter to zero\n",
-        "\n",
-        "    # Loop through each number in the list\n",
+        "    count = 0\n",
+        "t\n",
         "    for number in numbers:\n",
-        "        # Check if the number is greater than zero\n",
-        "        if number > 0:\n",
-        "            count += 1   # Increment counter if condition is true\n",
         "\n",
-        "    return count   # Return the final count\n",
+        "        if number > 0:\n",
+        "            count += 1\n",
+        "\n",
+        "    return count\n",
         "\n"
       ]
     },
@@ -289,54 +288,50 @@
         }
       ],
       "source": [
-        "import matplotlib.pyplot as plt   # Import library for plotting graphs\n",
-        "import math                      # Import math library for logarithmic calculations\n",
+        "import matplotlib.pyplot as plt\n",
+        "import math\n",
         "\n",
         "def binary_search(arr, target):\n",
         "    \"\"\"\n",
         "    Perform binary search on a sorted array to find a target element.\n",
         "    \"\"\"\n",
-        "    left, right = 0, len(arr) - 1   # Initialize search boundaries\n",
-        "    steps = 0                       # Counter to track number of steps\n",
+        "    left, right = 0, len(arr) - 1\n",
+        "    steps = 0\n",
         "\n",
-        "    # Continue searching while the left index is less than or equal to right\n",
         "    while left <= right:\n",
-        "        steps += 1                  # Increment step count each iteration\n",
-        "        mid = (left + right) // 2   # Find the middle index\n",
+        "        steps += 1\n",
+        "        mid = (left + right) // 2\n",
         "\n",
-        "        # Check if the middle element is the target\n",
+        "\n",
         "        if arr[mid] == target:\n",
-        "            return steps            # Target found, return steps\n",
-        "        # If target is greater, ignore left half\n",
+        "            return steps\n",
+        "\n",
         "        elif arr[mid] < target:\n",
         "            left = mid + 1\n",
-        "        # If target is smaller, ignore right half\n",
         "        else:\n",
         "            right = mid - 1\n",
         "\n",
-        "    return steps                    # Return steps if target not found\n",
+        "    return steps\n",
         "\n",
-        "# Generate input sizes from 1 to 1000 with step of 10\n",
+        "\n",
         "n_values = list(range(1, 1000, 10))\n",
         "time_values = []\n",
         "\n",
-        "# For each input size, approximate time complexity as log2(n)\n",
+        "\n",
         "for n in n_values:\n",
-        "    data = list(range(n))           # Create sorted list of size n\n",
+        "    data = list(range(n))\n",
         "    if n > 0:\n",
-        "        time_values.append(math.log2(n))  # Logarithmic growth\n",
+        "        time_values.append(math.log2(n))\n",
         "    else:\n",
         "        time_values.append(0)\n",
         "\n",
-        "# Plotting the logarithmic time complexity curve\n",
         "plt.figure(figsize=(10, 6))\n",
-        "plt.plot(n_values, time_values, label=\"O(log n)\")   # Plot input size vs log2(n)\n",
-        "plt.xlabel(\"Input size n\")                          # Label for x-axis\n",
-        "plt.ylabel(\"Time (logarithmic scale)\")              # Label for y-axis\n",
-        "plt.title(\"O(log n) Logarithmic Time Complexity (Binary Search)\")  # Title\n",
-        "plt.legend()                                        # Show legend\n",
-        "plt.grid(True)                                      # Add grid for clarity\n",
-        "plt.show()                                          # Display the plot"
+        "plt.plot(n_values, time_values, label=\"O(log n)\")\n",
+        "plt.xlabel(\"Input size n\")\n",
+        "plt.ylabel(\"Time (logarithmic scale)\")\n",
+        "plt.title(\"O(log n) Logarithmic Time Complexity (Binary Search)\")\n",
+        "plt.legend()\n",
+        "plt.show()"
       ]
     },
     {
@@ -383,14 +378,14 @@
         "import matplotlib.pyplot as plt\n",
         "import math\n",
         "\n",
-        "# Merge Sort implementation\n",
+        "\n",
         "def merge_sort(arr):\n",
         "    if len(arr) <= 1:\n",
         "        return arr\n",
         "\n",
-        "    mid = len(arr) // 2\n",
-        "    left = merge_sort(arr[:mid])   # Recursive call on left half\n",
-        "    right = merge_sort(arr[mid:])  # Recursive call on right half\n",
+        "    mid = len(arr) //\n",
+        "    left = merge_sort(arr[:mid])\n",
+        "    right = merge_sort(arr[mid:])\n",
         "\n",
         "    return merge(left, right)\n",
         "\n",
@@ -398,7 +393,7 @@
         "    result = []\n",
         "    i = j = 0\n",
         "\n",
-        "    # Merge two sorted halves\n",
+        "\n",
         "    while i < len(left) and j < len(right):\n",
         "        if left[i] < right[j]:\n",
         "            result.append(left[i])\n",
@@ -407,23 +402,22 @@
         "            result.append(right[j])\n",
         "            j += 1\n",
         "\n",
-        "    # Add remaining elements\n",
+        "\n",
         "    result.extend(left[i:])\n",
         "    result.extend(right[j:])\n",
         "    return result\n",
         "\n",
-        "# Input sizes\n",
+        "\n",
         "n_values = list(range(1, 1000, 50))\n",
         "time_values = []\n",
         "\n",
-        "# Approximate time complexity as n * log2(n)\n",
         "for n in n_values:\n",
         "    if n > 0:\n",
         "        time_values.append(n * math.log2(n))\n",
         "    else:\n",
         "        time_values.append(0)\n",
         "\n",
-        "# Plotting O(n log n)\n",
+        "\n",
         "plt.figure(figsize=(10, 6))\n",
         "plt.plot(n_values, time_values, label=\"O(n log n)\", color=\"purple\")\n",
         "plt.xlabel(\"Input size n\")\n",
@@ -485,18 +479,18 @@
         "    n = len(arr)\n",
         "    for i in range(n):\n",
         "        for j in range(n):\n",
-        "            count += 1   # Constant work for each pair\n",
+        "            count += 1\n",
         "    return count\n",
         "\n",
-        "# Input sizes\n",
-        "n_values = list(range(1, 300, 20))   # From 1 to 300 in steps of 20\n",
+        "\n",
+        "n_values = list(range(1, 300, 20))\n",
         "time_values = []\n",
         "\n",
-        "# Approximate time complexity as n^2\n",
+        "\n",
         "for n in n_values:\n",
         "    time_values.append(n**2)\n",
         "\n",
-        "# Plotting O(n^2)\n",
+        "\n",
         "plt.figure(figsize=(10, 6))\n",
         "plt.plot(n_values, time_values, label=\"O(n^2)\", color=\"red\")\n",
         "plt.xlabel(\"Input size n\")\n",
@@ -549,21 +543,20 @@
         "import matplotlib.pyplot as plt\n",
         "import math\n",
         "\n",
-        "# Naive recursive Fibonacci function\n",
+        "\n",
         "def fibonacci(n):\n",
         "    if n <= 1:\n",
         "        return n\n",
         "    return fibonacci(n-1) + fibonacci(n-2)\n",
         "\n",
-        "# Input sizes\n",
-        "n_values = list(range(1, 20))   # Keep small, exponential grows fast\n",
+        "\n",
+        "n_values = list(range(1, 20))\n",
         "time_values = []\n",
         "\n",
-        "# Approximate time complexity as 2^n\n",
+        "\n",
         "for n in n_values:\n",
         "    time_values.append(2**n)\n",
         "\n",
-        "# Plotting O(2^n)\n",
         "plt.figure(figsize=(10, 6))\n",
         "plt.plot(n_values, time_values, label=\"O(2^n)\", color=\"orange\")\n",
         "plt.xlabel(\"Input size n\")\n",
@@ -595,23 +588,23 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# Values of n\n",
+        "\n",
         "n = np.arange(1, 10)\n",
         "\n",
-        "# Time complexity functions\n",
+        "\n",
         "f_n = n\n",
         "g_n = np.log2(n)\n",
         "h_n = n**2\n",
         "k_n = 2**n\n",
         "\n",
-        "# Plotting\n",
+        "\n",
         "plt.figure(figsize=(8, 5))\n",
         "plt.plot(n, f_n, label='f(n) = n', color='blue')\n",
         "plt.plot(n, g_n, label='g(n) = log₂(n)', color='red')\n",
         "plt.plot(n, h_n, label='h(n) = n²', color='green')\n",
         "plt.plot(n, k_n, label='k(n) = 2ⁿ', color='gold')\n",
         "\n",
-        "# Labels and title\n",
+        "\n",
         "plt.xlabel('Values of n')\n",
         "plt.ylabel('Time Complexity')\n",
         "plt.title('Time Complexity Plot')\n",
