--- a/lab_4.ipynb
+++ b/lab_4.ipynb
@@ -66,42 +66,42 @@
         "import random\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# Linear Search implementation\n",
+        "\n",
         "def linear_search(arr, x):\n",
-        "    # Traverse the list element by element\n",
+        "\n",
         "    for i in range(len(arr)):\n",
-        "        # If the current element matches the target, return its index\n",
+        "\n",
         "        if arr[i] == x:\n",
         "            return i\n",
-        "    # If the element is not found, return -1\n",
+        "\n",
         "    return -1\n",
         "\n",
-        "# Different input sizes to test performance\n",
+        "\n",
         "input_sizes = [100, 200, 300, 400, 500, 600]\n",
-        "time_taken = []  # List to store time taken for each input size\n",
+        "time_taken = []\n",
         "\n",
-        "# Measure time taken for each input size\n",
+        "\n",
         "for n in input_sizes:\n",
-        "    arr = list(range(n))   # Create a list of size n with elements [0, 1, 2, ..., n-1]\n",
-        "    x = -1                 # Target element not in list (worst-case scenario)\n",
+        "    arr = list(range(n))\n",
+        "    x = -1\n",
         "\n",
-        "    # Start timer\n",
+        "\n",
         "    start_time = time.perf_counter()\n",
-        "    # Perform linear search\n",
+        "\n",
         "    linear_search(arr, x)\n",
-        "    # End timer\n",
+        "\n",
         "    end_time = time.perf_counter()\n",
         "\n",
-        "    # Record elapsed time\n",
+        "\n",
         "    time_taken.append(end_time - start_time)\n",
         "\n",
-        "# Plotting the results\n",
+        "\n",
         "plt.figure(figsize=(8, 5))\n",
-        "plt.plot(input_sizes, time_taken, marker='o', linestyle='-', color='b')  # Line plot with markers\n",
-        "plt.xlabel(\"Input Size (n)\")          # Label for x-axis\n",
-        "plt.ylabel(\"Time Taken (seconds)\")    # Label for y-axis\n",
-        "plt.title(\"Linear Search: Time Taken vs Input Size\")  # Title of the graph\n",
-        "plt.grid(True)                        # Add grid for better readability\n",
+        "plt.plot(input_sizes, time_taken, marker='o', linestyle='-', color='b')\n",
+        "plt.xlabel(\"Input Size (n)\")\n",
+        "plt.ylabel(\"Time Taken (seconds)\")\n",
+        "plt.title(\"Linear Search: Time Taken vs Input Size\")\n",
+        "plt.grid(True)\n",
         "plt.show()\n"
       ]
     },
@@ -129,46 +129,46 @@
         "import time\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# Recursive Binary Search implementation\n",
+        "\n",
         "def BinarySearch(arr, x, l, h):\n",
-        "    # Base case: if low index exceeds high index, element not found\n",
+        "\n",
         "    if l > h:\n",
         "        return -1\n",
         "\n",
-        "    # Find the middle index\n",
+        "\n",
         "    mid = (l + h) // 2\n",
         "\n",
-        "    # If middle element matches target, return index\n",
+        "\n",
         "    if arr[mid] == x:\n",
         "        return mid\n",
-        "    # If middle element is greater than target, search left half\n",
+        "\n",
         "    elif arr[mid] > x:\n",
         "        return BinarySearch(arr, x, l, mid - 1)\n",
-        "    # Otherwise, search right half\n",
+        "\n",
         "    else:\n",
         "        return BinarySearch(arr, x, mid + 1, h)\n",
         "\n",
-        "# Different input sizes to test performance\n",
+        "\n",
         "input_sizes = [100, 200, 300, 400, 500, 600, 700]\n",
         "time_taken = []\n",
         "\n",
-        "# Measure time taken for each input size\n",
+        "\n",
         "for n in input_sizes:\n",
-        "    arr = list(range(n))   # Sorted list of size n\n",
-        "    target = -1            # Target not in list (worst-case scenario)\n",
+        "    arr = list(range(n))\n",
+        "    target = -1\n",
         "\n",
-        "    start_time = time.perf_counter()   # Start timer\n",
-        "    BinarySearch(arr, target, 0, n - 1)  # Perform search\n",
-        "    end_time = time.perf_counter()     # End timer\n",
+        "    start_time = time.perf_counter()\n",
+        "    BinarySearch(arr, target, 0, n - 1)\n",
+        "    end_time = time.perf_counter()\n",
         "\n",
-        "    # Record elapsed time\n",
+        "\n",
         "    time_taken.append(end_time - start_time)\n",
         "\n",
-        "# Plotting the results\n",
+        "\n",
         "plt.figure(figsize=(8, 5))\n",
         "plt.plot(input_sizes, time_taken, marker='o', color='red')\n",
-        "plt.xlabel(\"Input Size (n)\")          # X-axis label\n",
-        "plt.ylabel(\"Time Taken (seconds)\")    # Y-axis label\n",
+        "plt.xlabel(\"Input Size (n)\")\n",
+        "plt.ylabel(\"Time Taken (seconds)\")\n",
         "plt.title(\"Recursive Binary Search: Time Taken vs Input Size\")\n",
         "plt.grid(True)\n",
         "plt.show()\n",
@@ -238,22 +238,22 @@
         "#write code for Prob-3\n",
         "# Function to search for a pattern in a given text\n",
         "def search(pat, txt):\n",
-        "    n = len(txt)   # Length of the text\n",
-        "    m = len(pat)   # Length of the pattern\n",
+        "    n = len(txt)\n",
+        "    m = len(pat)\n",
         "\n",
-        "    # Loop through the text, checking substrings of length 'm'\n",
-        "    for i in range(n - m + 1):  # Ensure we don't go out of bounds\n",
-        "        # Extract substring of length 'm' starting at index i\n",
-        "        # Compare it with the pattern\n",
+        "\n",
+        "    for i in range(n - m + 1):\n",
+        "\n",
+        "\n",
         "        if txt[i:i+m] == pat:\n",
-        "            # If match found, print the starting index\n",
+        "\n",
         "            print(f\"Pattern found at index {i}\")\n",
         "\n",
-        "# Take input from user\n",
-        "txt = input(\"Enter the text: \")      # The main text where we search\n",
-        "pat = input(\"Enter the pattern: \")   # The pattern to be searched\n",
         "\n",
-        "# Call the search function\n",
+        "txt = input(\"Enter the text: \")\n",
+        "pat = input(\"Enter the pattern: \")\n",
+        "\n",
+        "\n",
         "search(pat, txt)\n"
       ]
     },
