--- a/Lab_2_AlgorithmsBasics.ipynb
+++ b/Lab_2_AlgorithmsBasics.ipynb
@@ -165,7 +165,7 @@
       "source": [
         "# Exercise 4\n",
         "def func4(a, b):\n",
-        "    b.sort() # Time complexity for this function is O(Nlog N) where N = len(b)\n",
+        "    b.sort()\n",
         "    intersect = 0\n",
         "    for x in a:\n",
         "        if binary_search(b, x) >= 0:\n",
@@ -225,11 +225,11 @@
         "    func8_helper(A, 0, len(A) -1)\n",
         "\n",
         "def func8_helper(A, i, j):\n",
-        "    #Input: An array A and two indices i and j.\n",
+        "\n",
         "    n = j - 1 + 1\n",
         "    if n ==2:\n",
         "        if A[i] > A[j]:\n",
-        "            # Swap A[i] and A[j]\n",
+        "\n",
         "            A[i], A[j] = A[j], A[i]\n",
         "        elif n > 2:\n",
         "            m = n // 3\n",
@@ -300,7 +300,7 @@
         "def func12(arr, k):\n",
         "    arr_len = len(arr)\n",
         "    k = k % arr_len\n",
-        "    # Initialize a new array of the same length as 'arr'\n",
+        "\n",
         "    custom_arr = [0] * arr_len\n",
         "\n",
         "    for i in range(arr_len):\n",
@@ -405,8 +405,7 @@
       ],
       "source": [
         "#call the function\n",
-        "#arr = [12, 3, 4, 15,45,78,450]\n",
-        "#print(sum_arr)\n",
+        ")\n",
         "def sum_arr(arr):\n",
         "    result = 0\n",
         "    for x in arr:\n",
